--- a/src/pages/docs/grid-auto-rows.mdx
+++ b/src/pages/docs/grid-auto-rows.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 Use the `auto-rows-{size}` utilities to control the size implicitly-created grid rows.
 
 ```html
-<div class="grid grid-flow-row auto-rows-max">
+<div class="grid grid-flow-row **auto-rows-max**">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -28,7 +28,7 @@ Use the `auto-rows-{size}` utilities to control the size implicitly-created grid
 To control the grid-auto-rows property at a specific breakpoint, add a `{screen}:` prefix to any existing grid-auto-rows utility. For example, use `md:auto-rows-min` to apply the `auto-rows-min` utility at only medium screen sizes and above.
 
 ```html
-<div class="grid grid-flow-row auto-rows-max md:auto-rows-min">
+<div class="grid grid-flow-row auto-rows-max **md:auto-rows-min**">
   <div>1</div>
   <div>2</div>
   <div>3</div>
