--- a/src/pages/docs/animation.mdx
+++ b/src/pages/docs/animation.mdx
@@ -236,7 +236,7 @@ module.exports = {
 }
 ```
 
-Learn more in the [variants documentation](/docs/pseudo-class-variants#motion-safe-v1-6-0).
+Learn more in the [state variants documentation](/docs/hover-focus-and-other-states#motion-safe-v1-6-0).
 
 ## Responsive
 
