--- a/src/pages/docs/configuring-variants.mdx
+++ b/src/pages/docs/configuring-variants.mdx
@@ -10,7 +10,7 @@ import { TipGood, TipBad } from '@/components/Tip'
 
 ## <Heading hidden>Overview</Heading>
 
-The `variants` section of your `tailwind.config.js` file is where you control which core utility plugins should have [responsive variants](/docs/responsive-design) and [pseudo-class variants](/docs/pseudo-class-variants) generated.
+The `variants` section of your `tailwind.config.js` file is where you control which core utility plugins should have [responsive variants](/docs/responsive-design) and [state variants](/docs/hover-focus-and-other-states) generated.
 
 ```js
 // tailwind.config.js
