--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -311,7 +311,7 @@ Before using the CDN build, please note that many of the features that make Tail
 <List>
   <ListItemBad>You can't customize Tailwind's default theme</ListItemBad>
   <ListItemBad>You can't use any <a href="/docs/functions-and-directives">directives</a> like <code>@apply</code>, <code>@variants</code>, etc.</ListItemBad>
-  <ListItemBad>You can't enable features like <a href="/docs/pseudo-class-variants#group-hover"><code>group-hover</code></a></ListItemBad>
+  <ListItemBad>You can't enable additional variants like <a href="/docs/hover-focus-and-other-states#group-focus"><code>group-focus</code></a></ListItemBad>
   <ListItemBad>You can't install third-party plugins</ListItemBad>
   <ListItemBad>You can't tree-shake unused styles</ListItemBad>
 </List>
