--- a/src/pages/docs/grid-column.mdx
+++ b/src/pages/docs/grid-column.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Grid Column Start / End"
 description: "Utilities for controlling how elements are sized and placed across grid columns."
-featureVersion: "v1.2.0+"
 ---
 
 import gridColumnPlugin from 'tailwindcss/lib/plugins/gridColumn'
@@ -32,9 +31,12 @@ Use the `col-span-{n}` utilities to make an element span _n_ columns.
 </template>
 
 <div class="grid grid-cols-3 gap-4">
-  <!-- ... -->
+  <div class="...">1</div>
+  <div class="...">2</div>
+  <div class="...">3</div>
   <div class="**col-span-2** ...">4</div>
-  <!-- ... -->
+  <div class="...">5</div>
+  <div class="...">6</div>
   <div class="**col-span-2** ...">7</div>
 </div>
 ```
@@ -48,8 +50,12 @@ Note that CSS grid lines start at 1, not 0, so a full-width element in a 6-colum
 ```html lightBlue
 <template preview class="bg-white p-8">
   <div class="grid grid-cols-6 gap-4">
+    <div class="bg-stripes bg-stripes-light-blue-500 bg-light-blue-300 bg-opacity-25 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold"></div>
     <div class="col-start-2 col-span-4 bg-light-blue-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">1</div>
+    <div class="bg-stripes bg-stripes-light-blue-500 bg-light-blue-300 bg-opacity-25 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold"></div>
     <div class="col-start-1 col-end-3 bg-light-blue-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">2</div>
+    <div class="bg-stripes bg-stripes-light-blue-500 bg-light-blue-300 bg-opacity-25 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold"></div>
+    <div class="bg-stripes bg-stripes-light-blue-500 bg-light-blue-300 bg-opacity-25 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold"></div>
     <div class="col-end-7 col-span-2 bg-light-blue-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">3</div>
     <div class="col-start-1 col-end-7 bg-light-blue-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">4</div>
   </div>
